<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".DetailActivity">


    <ImageView
        android:id="@+id/iv_avatar_received"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_username_received"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar_received"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar_received" />

    <TextView
        android:id="@+id/tv_name_received"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_username_received"
        app:layout_constraintStart_toStartOf="@+id/tv_username_received"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_received" />

    <TextView
        android:id="@+id/tv_location_received"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/location"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name_received"
        app:layout_constraintStart_toStartOf="@+id/tv_name_received"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_received" />

    <TextView
        android:id="@+id/tv_repository_received"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/repository"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_location_received"
        app:layout_constraintStart_toStartOf="@+id/tv_location_received"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_received" />

    <TextView
        android:id="@+id/tv_company_received"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/company"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_repository_received"
        app:layout_constraintStart_toStartOf="@+id/tv_repository_received"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository_received" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:minHeight="?actionBarSize"
        app:layout_constraintEnd_toEndOf="@+id/tv_company_received"
        app:layout_constraintStart_toStartOf="@+id/tv_company_received"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_received"
        app:tabTextColor="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_anchor="@id/iv_avatar_received"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar_received"
        app:layout_constraintEnd_toEndOf="@+id/iv_avatar_received"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar_received"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar_received"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
        tools:ignore="MissingConstraints" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="205dp"
        app:layout_constraintEnd_toEndOf="@+id/tabs"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />


</androidx.constraintlayout.widget.ConstraintLayout>